# votacoes-assembleia-da-republica

./: .env.example  .gitignore  LICENSE  README.md  delete_all_statuses.py  delete_statuses.py  pyproject.toml  state.json  update_account.py  vote_detail.template  vote_status.template  vote_thread.template  vote_toot.template
.github/workflows/: delete_last_hour_statuses.yml  delete_statuses.yml  pytest.yml  ruff.yml  update_account.yml
scripts/: compress_state.py  count_statuses.py  decompress_state.py
tests/: test_state_storage.py  test_update_account.py
tests/files/legislatures/: empty_example.json  minimal_example.json  minimal_example_approved_and_rejected.json  multiple_approved_sorted.json  nil_ini_eventos.json  nil_vote_detail.json
votacoes_assembleia_da_republica/: fetch_votes.py  mastodon_client.py  state_storage.py  update_account.py
