[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
mastodon-py = "^1.8.1"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
lxml = "^5.2.1"
python-dotenv = "^1.0.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"
requests-mock = "^1.12.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.6"
taskipy = "^1.14.1"

[tool.ruff]
line-length = 160

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.taskipy.tasks]
compress-state = "PYTHONPATH=. python3 scripts/compress_state.py"
decompress-state = "PYTHONPATH=. python3 scripts/decompress_state.py"
delete-statuses = "python3 scripts/delete_statuses.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

